@@ -35,8 +35,6 @@ function generatePrettyUrl($text)
 		'z'	=>	array ('z', 'Z'),
 		'-'	=>	array ('-', ' ', '.', ','),
 		'_'	=>	array ('_'),
-		'+'	=>	array ('+', '&'),
-		'+-'	=>	array ('±'),
 		'0'	=>	array ('0'),
 		'1'	=>	array ('1', '¹'),
 		'2'	=>	array ('2', '²'),
@@ -55,6 +53,8 @@ function generatePrettyUrl($text)
 		'dollar'	=>	array ('$'),
 		'half'	=>	array ('½'),
 		'percent'	=>	array ('%'),
+		'plus'	=>	array ('+'),
+		'plusminus'	=>	array ('±'),
 		'pound'	=>	array ('£'),
 		'quarter'	=>	array ('¼'),
 		'section'	=>	array ('§'),
